--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     // AD(X) SDK Version
-    ext.adxSdkVersion = '2.0.0-beta13'
+    ext.adxSdkVersion = '2.0.0'
 
     repositories {
         google()
