[수정] SDK 2.5.3 업데이트 [수정] 뉴스 배너 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         </activity>
 
         <activity android:name=".BannerActivity" />
+        <activity android:name=".NewsBannerActivity" />
         <activity android:name=".InterstitialActivity" />
         <activity android:name=".RewardedAdActivity" />
         <activity android:name=".CloseAdActivity" />
