--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,4 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
 android.enableJetifier=true
-android.enableDexingArtifactTransform=false
+org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
